# smt

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.example.yaml  config.yaml.example  go.mod  go.sum  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
cmd/smt/: config_loader.go  drift.go  drift_test.go  init.go  main.go  main_test.go  profile.go  run.go  run_test.go  secrets.go  snapshot_list_test.go  sync.go  sync_test.go
docs/: DESIGN.md  PHILOSOPHY.md  SETUP.md  SQLACODEGEN_FORK.md  TECH_SPEC.md  apply-recovery.md  cli.md  deterministic-ddl-epic.md  live-acceptance.md  local-ai-review-handoff.md  release-checklist.md  sync-contract.md  v1-compatibility.md
internal/canonical/: canonical.go  from_canonical.go  from_canonical_tz_test.go  oracle_all_test.go  oracle_pg_test.go  to_canonical.go  to_canonical_test.go
internal/checkpoint/: backend.go  filestate.go  filestate_test.go  profiles.go  profiles_test.go  runkind_test.go  snapshots.go  state.go  state_test.go
internal/config/: config.go  config_test.go  memory_darwin.go  memory_linux.go  memory_other.go  memory_windows.go  permissions_unix.go  permissions_windows.go
internal/dbconfig/: dbconfig.go
internal/ddl/: renderer.go  renderer_fixes_test.go  renderer_fsp_test.go  renderer_source_dialect_test.go  renderer_test.go
internal/driver/: ai_errordiag.go  ai_errordiag_test.go  ai_errordiag_wrap_test.go  ai_schemafix.go  (+29 more)
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_migration.py  test_models.py  test_sqlacodegen_smt.py
(+123 files in other folders)
