[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smt"
version = "0.1.0"
description = "PostgreSQL/MSSQL schema migration toolkit using SQLAlchemy and Alembic"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "mako>=1.3",
    "sqlacodegen>=4.0,<5.0",
    "inflect>=4.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mssql = ["pyodbc>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
smt = "smt.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/smt", "src/sqlacodegen_smt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
